Fixed horizontal scroll problem

--- a/src/main.scss
+++ b/src/main.scss
@@ -60,10 +60,7 @@ span {
     word-wrap: break-word;
 }
 
-html,
-body {
-    width: 100%;
-    height: 100%;
+html,body{
     scroll-behavior: smooth;
 }
 
